--- a/package.json
+++ b/package.json
@@ -3,18 +3,29 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@coreui/coreui": "^4.2.6",
+    "@coreui/react": "^4.7.0",
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
+    "@mui/icons-material": "^5.11.11",
     "@mui/material": "^5.11.9",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "bootstrap": "^5.2.3",
     "fraction-parser": "^1.0.6",
+    "fraction-unicode": "^1.0.1",
+    "prop-types": "^15.8.1",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.7.2",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.8.0",
     "react-lazyload": "^3.2.0",
+    "react-number-format": "^5.1.4",
     "react-router-dom": "^6.8.1",
     "react-scripts": "5.0.1",
+    "tailwindcss": "^3.2.7",
+    "vulgar-fractions": "^1.4.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
