--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
   "name": "food-groups-site",
   "version": "0.1.0",
-  "homepage": "https://shai987.github.io",
-  "private": true,
+  "homepage": "https://shai987.github.io/food-groups-site",
   "dependencies": {
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
