--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "food-groups-site",
   "version": "0.1.0",
   "homepage": "https://shai987.github.io/food-groups-site",
+  "private": true,
   "dependencies": {
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
