--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
   "homepage": "https://shai987.github.io/food-groups-site",
   "author": "Shai Geffen",
   "license": "MIT",
-  "private": true,
   "dependencies": {
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
@@ -24,7 +23,8 @@
     "react-router-dom": "^6.8.1",
     "react-scripts": "5.0.1",
     "tailwindcss": "^3.2.7",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "webpack": "^5.86.0"
   },
   "scripts": {
     "predeploy": "npm run build",
