--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-lazyload": "^3.2.0",
     "react-router-dom": "^6.8.1",
     "react-scripts": "5.0.1",
+    "react-select": "^5.8.0",
     "tailwindcss": "^3.2.7",
     "web-vitals": "^2.1.4",
     "webpack": "^5.86.0"
